--- a/CoputerShop/MainWindow.xaml
+++ b/CoputerShop/MainWindow.xaml
@@ -12,8 +12,12 @@
             <RowDefinition Height="550"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0">
-            <Label Content="Название" Width="400" Margin="5"/>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <Image Source=""/>
+            <StackPanel>
+                <Label Content="Offline" Width="400" Height="50" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="36px" FontWeight="Bold"/>
+                <Label Content="{Binding ElementName=FrMain, Path=Content.Title}" HorizontalAlignment="Left" Margin="5" Width="400" Height="40" FontSize="25px" VerticalContentAlignment="Center"/>
+            </StackPanel>
         </StackPanel>
 
         <Grid Grid.Row="1">
