--- a/CoputerShop/Pages/Product.xaml
+++ b/CoputerShop/Pages/Product.xaml
@@ -9,26 +9,13 @@
       Title="Товары">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="500"/>
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBox x:Name="t_searcher_t" Margin="5" Width="300" Height="30" TextChanged="t_searcher_t_TextChanged"/>
-                <ComboBox x:Name="c_sorter" Margin="5" Width="200" Height="30" SelectionChanged="c_sorter_SelectionChanged"/>
-                <ComboBox x:Name="c_filter" Margin="5" Width="200" Height="30" SelectionChanged="c_filter_SelectionChanged"/>
-            </StackPanel>
-        </Grid>
-
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="240"/>
                 <ColumnDefinition Width="760"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0">
+            <Grid Grid.Column="0" Margin="5">
                 <StackPanel Orientation="Vertical" VerticalAlignment="Top" HorizontalAlignment="Center">
                     <Button x:Name="b_user" Content="Пользователь" Width="200" Height="30" Margin="5" Click="b_user_Click">
                     </Button>
@@ -42,7 +29,20 @@
             </Grid>
 
             <Grid Grid.Column="1" VerticalAlignment="Top">
-                <ListView x:Name="l_productList" Margin="5" Width="710" Height="440">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="500"/>
+                </Grid.RowDefinitions>
+
+                <Grid Grid.Row="0">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <TextBox x:Name="t_searcher_t" Margin="5" Width="300" Height="30" TextChanged="t_searcher_t_TextChanged"/>
+                        <ComboBox x:Name="c_sorter" Margin="5" Width="190" Height="30" SelectionChanged="c_sorter_SelectionChanged"/>
+                        <ComboBox x:Name="c_filter" DisplayMemberPath="product_type_name" Margin="5" Width="190" Height="30" SelectionChanged="c_filter_SelectionChanged"/>
+                    </StackPanel>
+                </Grid>
+
+                <ListView x:Name="l_productList" Margin="5" Width="700" Height="440" Grid.Row="1" VerticalAlignment="Top">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Border BorderThickness="1" BorderBrush="Black" CornerRadius="25">
@@ -116,13 +116,6 @@
 
                                     <StackPanel Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
                                         <Button x:Name="b_add_to_cart" Content="В корзину" Width="100" Height="30" Margin="5" Click="b_add_to_cart_Click"/>
-                                        <StackPanel Orientation="Horizontal" x:Name="s_bouth_panel" HorizontalAlignment="Center">
-                                            <Button x:Name="b_less" Content="-" Width="30" Height="30" Margin="5" Click="b_less_Click"/>
-                                            <TextBlock>
-                                            <Run Text="{Binding Sells.sell_product_count}" x:Name="t_count"/>
-                                            </TextBlock>
-                                            <Button x:Name="b_more" Content="+" Width="30" Height="30" Margin="5" Click="b_more_Click"/>
-                                        </StackPanel>
                                     </StackPanel>
                                 </Grid>
                             </Border>
