--- a/CoputerShop/Pages/User.xaml
+++ b/CoputerShop/Pages/User.xaml
@@ -15,10 +15,11 @@
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0">
-            <StackPanel>
+            <StackPanel Margin="5">
                 <Button x:Name="b_shop" Content="Магазин" Width="200" Height="30" Margin="5" Click="b_shop_Click"/>
                 <Button x:Name="b_cart" Content="Корзина" Width="200" Height="30" Margin="5" Click="b_cart_Click"/>
                 <ComboBox x:Name="c_list_chose" Width="200" Height="30" Margin="5" SelectionChanged="c_list_chose_SelectionChanged"/>
+                <Button x:Name="b_exit" Content="Выйти" Width="200" Height="30" Margin="5" Click="b_exit_Click"/>
             </StackPanel>
         </Grid>
 
@@ -42,7 +43,7 @@
                 <ComboBox x:Name="c_log_date" Margin="5" Height="30" Width="200" IsEnabled="False" Visibility="Collapsed" SelectionChanged="c_log_date_SelectionChanged"/>
             </StackPanel>
             
-            <StackPanel x:Name="s_users" Grid.Row="1">
+            <StackPanel x:Name="s_users" Grid.Row="1" Visibility="Collapsed">
                 <ListView x:Name="l_user_list" Margin="5" Width="500" Height="480" VerticalAlignment="Top" HorizontalAlignment="Left">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -76,7 +77,7 @@
                 </ListView>
             </StackPanel>
 
-            <StackPanel x:Name="s_orders" Grid.Row="1">
+            <StackPanel x:Name="s_orders" Grid.Row="1" Visibility="Collapsed">
                 <ListView x:Name="l_order_list" Margin="5" Width="500" Height="480" VerticalAlignment="Top" HorizontalAlignment="Left">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -124,7 +125,7 @@
                 </ListView>
             </StackPanel>
 
-            <StackPanel x:Name="s_sells" Grid.Row="1">
+            <StackPanel x:Name="s_sells" Grid.Row="1" Visibility="Collapsed">
                 <ListView x:Name="l_sells_list" Margin="5" Width="500" Height="480" VerticalAlignment="Top" HorizontalAlignment="Left">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -172,14 +173,14 @@
                 </ListView>
             </StackPanel>
 
-            <StackPanel x:Name="s_logs" Grid.Row="1">
-                <ListView x:Name="l_log_list" Margin="5" Width="500" Height="480" VerticalAlignment="Top" HorizontalAlignment="Left">
+            <StackPanel x:Name="s_logs" Grid.Row="1" Visibility="Collapsed">
+                <ListView x:Name="l_log_list" Margin="5" Width="700" Height="440" VerticalAlignment="Top" HorizontalAlignment="Left">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="80"/>
-                                    <ColumnDefinition Width="270"/>
+                                    <ColumnDefinition Width="450"/>
                                     <ColumnDefinition Width="130"/>
                                 </Grid.ColumnDefinitions>
 
