--- a/CoputerShop/MainWindow.xaml
+++ b/CoputerShop/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoputerShop"
         mc:Ignorable="d"
-        Title="Електрический стул" Height="650" Width="1000">
+        Title="Електрический стул" Height="650" Width="1000"
+        Icon="/SystemImages/placeholder.png">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
@@ -13,11 +14,12 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Image Source=""/>
+            <Image Source="/SystemImages/placeholder.png" Width="100" Height="100"/>
             <StackPanel>
-                <Label Content="Offline" Width="400" Height="50" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="36px" FontWeight="Bold"/>
-                <Label Content="{Binding ElementName=FrMain, Path=Content.Title}" HorizontalAlignment="Left" Margin="5" Width="400" Height="40" FontSize="25px" VerticalContentAlignment="Center"/>
+                <Label Content="Offline" Width="400" Height="50" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="36px" FontWeight="Bold"/>
+                <Label Content="{Binding ElementName=FrMain, Path=Content.Title}" HorizontalAlignment="Left" Width="400" Height="40" FontSize="25px" VerticalContentAlignment="Center" FontWeight="Bold"/>
             </StackPanel>
+            <Label Content="Copyrigth by Vlasov Andry 2024" HorizontalAlignment="Right" Width="200" Height="30" Margin="300,0" VerticalAlignment="Bottom"/>
         </StackPanel>
 
         <Grid Grid.Row="1">
